--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -1,13 +1,28 @@
 {
-  "name": "portfolio",
+  "name": "jason-barr-portfolio",
   "version": "v1.0.0",
-  "description": "Jason Barr portfolio",
+  "description": "Jason Barr React portfolio",
   "main": "index.js",
   "author": "Jason Barr (me@jasonbarr.dev)",
+  "scripts": {
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
+    "format": "prettier --write \"src/**/*.{js,jsx}\"",
+    "lint:css": "stylelint \"src/**/*.{js,jsx,css,scss}\"",
+    "lint:js": "eslint \"src/**/*.{js,jsx}\"",
+    "lint": "npm run lint:js && npm run lint:css",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --open --hot --port 3000 --config webpack.config.dev.js",
+    "test": "jest --watch",
+    "test:run": "jest",
+    "test:all": "jest --watchAll",
+    "test:update": "jest -u",
+    "test:coverage": "jest --coverage",
+    "serve": "live-server --port=5000 build"
+  },
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.7.4",
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.23",
+    "eslint-plugin-jest": "^23.1.1",
     "react": "^16.12.0",
     "react-conflux": "0.0.2-beta.6",
     "react-dom": "^16.12.0",
